fix: center text was not centered

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,26 @@ body {
 .highlight {
   color: #b3a5f1;
 }
+
+.category-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  position: relative;
+}
+
+.category-container > div:first-child {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+
+  margin-top: 50px;
+}
+
+.category-container::after {
+  content: "";
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+}
